--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "crud-react-nodejs-mongodb",
   "version": "1.0.0",
   "description": "Crud que implemente las tecnologías de React, Nodejs, MongoDB",
-  "main": "app.js",
-  "type" : "module",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "jakeekajjakeekaj",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
