--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "jakeekajjakeekaj",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0"
   },
